@@ -13,7 +13,6 @@ inc/Module/Install/WriteAll.pm
 lib/Catalyst/Authentication/Store/LDAP.pm
 lib/Catalyst/Authentication/Store/LDAP/Backend.pm
 lib/Catalyst/Authentication/Store/LDAP/User.pm
-Makefile.old
 Makefile.PL
 MANIFEST			This list of files
 META.yml
